<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Utility Manager</string>
    <string name="electricity_manager">Electricity Management</string>
    <string name="new_config">Add new \n configuration</string>
    <string name="fuel_manager">Fuel Management</string>
    <string name="view_history">VIEW HISTORY</string>
    <string name="setup_vehicle">SETUP VEHICLE</string>
    <string name="theme">Track your fill-ups &amp; save money..</string>
    <string name="water_manager">Water Management</string>
    <string name="user_information">User Information</string>
    <string name="no_of_family_members">No of family members</string>
    <string name="week">Week</string>
    <string name="components">Components</string>
    <string name="drinking">Drinking</string>
    <string name="showering">Showering</string>
    <string name="washing">Washing</string>
    <string name="gardening">Gardening</string>
    <string name="other">Other</string>
    <string name="delete_water_data">Delete Water Data</string>
    <string name="total_water_liters_for_month">Total water consumption for month</string>
    <string name="standard_values">Standard Values (liters)</string>
    <string name="register">Register Vehicle</string>
    <string name="name">Vehicle Name</string>
    <string name="field1">MyVehicle</string>
    <string name="brand">Brand</string>
    <string name="select1">Select</string>
    <string-array name="brands">
        <item>Toyota</item>
        <item>Suzuki</item>
        <item>BMW</item>
        <item>Audi</item>
        <item>Nissan</item>
        <item>Hyundai</item>
        <item>Yamaha</item>
        <item>Honda</item>
        <item>Other</item>
    </string-array>
    <string name="model">Model</string>
    <string name="field3">Enter model</string>
    <string name="year">Year</string>
    <string name="select2">Select</string>
    <string-array name="years">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string name="save">SAVE</string>
    <string name="weekly_usage">Weekly Usage</string>
    <string name="total_water_usage">Total Water Usage</string>
    <string name="total_water_units">Total Water Units (liters/1000)</string>
    <string name="weekly_cost">Weekly Cost = (1 unit*24)+(300)LKR</string>
    <string name="gas">Gas</string>
    <string name="network">Network</string>
    <string name="otherUtilities">Other Utilities</string>
    <string name="entermonthlyData">Enter your monthly Data amount</string>
    <string name="dataamount">0.00 MB</string>
    <string name="submit">SUBMIT</string>
    <string name="view_config">View \nConfiguration</string>
    <string name="view_monthly_bill">VIEW MONTHLY BILL</string>
    <string name="history">Weekly History</string>
    <string name="week1">Week 1</string>
    <string name="week2">Week 2</string>
    <string name="week3">Week 3</string>
    <string name="week4">Week 4</string>
    <string name="usage_history1">Total water usage:4000l\n Total water units : 4 units\n Weekly cost         :Rs.396</string>
    <string name="usage_history2">Total water usage:5000l\n Total water units : 5 units\n Weekly cost         :Rs.420</string>
    <string name="usage_history3">Total water usage:6000l\n Total water units : 6 units\n Weekly cost         :Rs.444</string>
    <string name="usage_history4">Total water usage:3000l\n Total water units : 3 units\n Weekly cost         :Rs.372</string>
    <string name="delete">Delete</string>
    <string name="monthly_water_bill">Monthly Water Bill</string>
    <string name="total_water_units_for_months">Total Water units for a month</string>
    <string name="Monthly_cost">Monthly Cost</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="update">Update</string>
    <string name="fuel_usage">Weekly Fuel Usage</string>
    <string name="usage">Fuel usage per KM</string>
    <string name="usage_value">km/ltr</string>
    <string name="distance">Distance Travelled</string>
    <string name="distance_value">km</string>
    <string name="filled">Fuel Amount(filled)</string>
    <string name="filled_value">liters</string>
    <string name="calculate">CALCULATE</string>
    <string name="remains">Remaining</string>
    <string name="fuel_used">Fuel Used(L)</string>
    <string name="used_value">15</string>
    <string name="remain">Remaining(L)</string>
    <string name="remain_value">5</string>
    <string name="fuel_price">Fuel price (per liter)</string>
    <string name="price_value">400</string>
    <string name="week_cost">Weekly cost (LKR)</string>
    <string name="cost">6000</string>
    <string name="fuel_history">Fuel Usage History</string>
    <string name="fuel_history1">Total Distance (km) : 30\n Fuel Usage (liters) : 15\n Total cost: 6000</string>
    <string name="fuel_history2">Total Distance (km) : 54\n Fuel Usage (liters) : 12\n Total cost: 7000</string>
    <string name="fuel_history3">Total Distance (km) : 79\n Fuel Usage (liters) : 27\n Total cost: 8350</string>
    <string name="fuel_history4">Total Distance (km) : 224\n Fuel Usage (liters) : 52\n Total cost: 11000</string>
    <string name="usage_update">Weekly Fuel Usage Update</string>
    <string-array name="weeks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="kmltr">12</string>
    <string name="km">50</string>
    <string name="liters">10</string>
    <string name="calnup">UPDATE &amp; CALCULATE</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_com">Select Components</string>
    <string name="light">Light bulb</string>
    <string name="fan">Fan</string>
    <string name="fridge">Fridge</string>
    <string name="tv">TV</string>
    <string name="ac">AC</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="rice_cooker">Rice Cooker</string>
    <string name="kettel">Kettel</string>
    <string name="iron">Iron</string>
    <string name="hot_plate">Hot Plate</string>
    <string name="watt">Watt</string>
    <string name="enter_watt">Enter Watts</string>
    <string name="how_many">How Many</string>
    <string name="num_items">Number of owned</string>
    <string name="hours">Hours</string>
    <string name="no_for">Turn on for</string>
    <string name="avg_time">**Add hours or leave empty for \nadd average time automatically</string>
    <string name="add_btn">Add</string>
    <string name="back_btn">Back</string>
    <string name="you_usage">Your Usage</string>
    <string name="availabldataamount">Available data amount</string>
    <string name="weeklyusage">Weekly Usage</string>
    <string name="monthlyusge">Monthly Usage</string>
    <string name="addtodayscreentime">Add Today\'s Screen Time</string>
    <string name="totaldatausage">Total Weekly Data Usage</string>
    <string name="totalweekdataamount">0.00 MB</string>
    <string name="dataallusage">All Usage</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="otherinternet">Other Internet</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="tiktok">Tik Tok</string>
    <string name="youtube">You Tube</string>
    <string name="whatsappdata">0.00 MB</string>
    <string name="instagramdata">0.00 MB</string>
    <string name="otherdatausage">0.00 MB</string>
    <string name="facebookdata">0.00 MB</string>
    <string name="youtubedata">0.00 MB</string>
    <string name="tiktokdata">0.00 MB</string>
    <string name="editdatausage">Edit Usage</string>
    <string name="totalmonthlydatausage">Total Monthly Data Usage</string>
    <string name="totalmonthlydataamount">0.00 MB</string>
    <string name="whatsappmonthlydata">0.00 MB</string>
    <string name="instagrammonthlydata">0.00 MB</string>
    <string name="othermonthlydatausage">0.00 MB</string>
    <string name="facebookmonthlydata">0.00 MB</string>
    <string name="youtubemonthlydata">0.00 MB</string>
    <string name="tiktokmonthlydata">0.00 MB</string>
    <string name="select_application">Select Application</string>
    <string name="addscreentime">Add Your screen time</string>
    <string name="howmanydevices">How many Devices</string>
    <string name="scntime">00.00</string>
    <string name="devices">00</string>
    <string name="deletemonthlyusage">Delete Usage</string>
    <string name="current_usage">Current Usage</string>
    <string name="estimated_usage">Estimated Usage</string>
    <string name="curr_usage">113</string>
    <string name="est_usage">160</string>
    <string name="No_items">No of Items</string>
    <string name="add_weekly_usage">Add weekly usage</string>
    <string name="next">Next Page</string>
    <string name="num_units">Number of units</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="sixhours">6 Hours</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="twenty_five">25</string>
    <string name="fifty_six">56</string>
    <string name="handred">100W</string>
    <string name="globel_avg">Average global Usage</string>
    <string name="total_elec_usage">Total Usage</string>
    <string name="used_units">Used units for the week</string>
    <string name="new_month">New month</string>
    <string name="units">Units</string>
    <string name="dashboard">Dashboard</string>
    <string name="electro">Go on check why \nyour electric bill \ncost you high</string>
    <string name="water_home">See how you \nspend the water \nweekly</string>
    <string name="fuel_home">Go and check \nYour Fuel usage \nand cost</string>
    <string name="other_home">Limit user Internet \nusage by tracking \nnow!!</string>
    <string name="login">LOGIN</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="Username">Username</string>
    <string name="or">Or</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="reg_user">REGISTER USER</string>
    <string name="full_name">Full Name</string>
    <string name="contact">Contact No</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="reg">SIGN UP</string>
    <string name="acc">Already have an account?</string>
    <string name="signin">SIGN IN</string>
    <string name="reg1">Enter Name</string>
    <string name="reg2">sample@example.com</string>
    <string name="reg3">### ##### ###</string>
    <string name="reg4">Enter Password</string>
    <string name="reg5">Re-Enter Password</string>
    <string name="logout">Logout</string>
    <string name="warning">Warning</string>
    <string name="warning_msg">Your estimated unit is going be exceed by next week \n\nLimit your electricity usage  \!\!\!</string>
    <string name="understand">Understand</string>
    <string name="enter_gas_details">Enter your gas Details</string>
    <string name="mass_of_the_cylinder">Cylinder Size (kg of lpg)</string>
    <string name="number_of_burners">Number of Burners</string>
    <string name="burn_rate_of_burners">Burn Rate of Burners (kg/hr)</string>
    <string name="gas_details_save">SAVE</string>
    <string name="awailable_hours_remaining">Awailable Hours Remaining</string>
    <string name="awailable_hours">00</string>
    <string name="weekgasamount">Weekly Usage</string>
</resources>