<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".models.weekly_fuel_usage">

    <TextView
        android:id="@+id/circle12"
        android:layout_width="235dp"
        android:layout_height="235dp"
        android:layout_marginStart="264dp"
        android:layout_marginBottom="568dp"
        android:background="@drawable/circle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/circle11"
        android:layout_width="212dp"
        android:layout_height="212dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="624dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:text="@string/fuel_usage"
        android:textColor="@color/orange"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="104dp"
        android:text="@string/week"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="143dp"
        android:layout_height="58dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/select1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="216dp"
        android:text="@string/usage"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:ems="10"
        android:hint="@string/usage_value"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="216dp"
        android:text="@string/distance"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:ems="10"
        android:hint="@string/distance_value"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="208dp"
        android:text="@string/filled"
        android:textColor="@color/black"
        android:textSize="@dimen/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:ems="10"
        android:hint="@string/filled_value"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/button2"
        android:layout_width="132dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName13" />

    <Button
        android:id="@+id/button13"
        android:layout_width="127dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/back_btn"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName13" />

</androidx.constraintlayout.widget.ConstraintLayout>